# oversee

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  flake.nix  nixpkgs-package.nix  release-plz.toml
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: audit.yml  ci.yml  release-plz.yml  release.yml
Formula/: oversee.rb
perf/: README.md  flamegraph.sh  measure.sh  record.sh
scripts/: .env.example  publish_crates.sh  publish_homebrew.sh  test_release.sh
src/: app.rs  cpu.rs  gpu.rs  main.rs  memory.rs  process.rs  theme.rs  tui.rs  ui.rs
