[package]
name = "oversee"
version = "0.2.3"
edition = "2024"
description = "A modern system monitor for macOS with Apple Silicon GPU support"
license = "MIT"
authors = ["abosnjakovic"]
repository = "https://github.com/abosnjakovic/oversee"
homepage = "https://github.com/abosnjakovic/oversee"
readme = "README.md"
keywords = ["macos", "monitor", "system", "gpu", "apple-silicon"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
ratatui = { version = "0.29.0", features = ["all-widgets"] }
sysinfo = "0.32"
crossterm = "0.28"
libc = "0.2"
